--- a/index.html
+++ b/index.html
@@ -5,41 +5,88 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./src/output.css">
   <title>Frontend Mentor | Single-page design portfolio</title>
 </head>
-<body>
+<body class="pr-4 pl-4 bg-[#fff7f0] flex flex-col justify-center items-center">
+<header>
+  <div class="flex mt-4 ml-4 mr-4 mb-[34px] gap-[119px]">
+    <img src="./assets/logo.svg" alt="logo">
+    <button class="font-[jakarta sans] mt-[13px]  w-44 h-11 rounded-[28px]  bg-black text-white text-[14px] font-bold not-italic leading-[28px] ">Free Consultation</button>
+  </div>
+  <div class="gap-4 ml-4 mr-4 mb[32px]">
+ <h2 class="font-[jakarta sans] text-[36px] font-bold not-italic  text-center text-[#030303]">Design solutions made easy</h2>
+ <p class="text-center font-[jakarta sans] not-italic text-[16px] font-medium leading-[26px] text-[#7A746E]">With over ten years of experience in various design disciplines, I’m your one-stop shop for your design needs.</p>
+  </div>
+</header>
+<main>
+<div class=" pt-8 pb-[100px]">
+<div class="bg-[#755CDE] w-[343px] h-[364px] rounded-[8px] pb-6">
+  <img class="pt-6 pl-[191px] pb-[94px] pr[24px]"  src="./assets/pattern-graphic-design.svg" alt="pattern Graphic">
+  <h3 class="pl-6 text-[24px] font-[jakarta sans] text-[#FFFFFF] font-bold not-italic leading-normal   ">Graphic Design</h3>
+</div>
+<div class="flex gap-[25px] pt-6 ">
+  <div class="bg-[#F6A560] w-[159px] h-[182px] rounded-[8px] gap-6 ">
+    <img class="pt-6 pl-[70px] pb-10 pr[24px]"  src="./assets/pattern-ui-ux.svg" alt="pattern Graphic">
+    <h3 class=" pl-6 text-[24px] font-[jakarta sans] text-[#FFFFFF] font-bold not-italic leading-normal ">UI/UX</h3>
+  </div>
+  <div class="bg-[#F39E9E] w-[159px] h-[182px] rounded-[8px] gap-6 ">
+    <img class="pt-6 pl-[70px] pb-10 pr[24px]"  src="assets/pattern-apps.svg" alt="pattern Graphic">
+    <h3 class=" pl-6 text-[24px] font-[jakarta sans] text-[#FFFFFF] font-bold not-italic leading-normal ">Apps</h3>
+  </div>
+</div>
+<div class="bg-[#EB7565] w-full h-full rounded-[8px] mt-6 ">
+  <img class="pt-6 pl-[190px] pb-10 pr-7"  src="./assets/pattern-illustrations.svg" alt="ilustrator Graphic">
+  <h3 class="pl-6 text-[24px] font-[jakarta sans] text-[#FFFFFF] font-bold not-italic leading-normal ">Illustrations</h3>
+</div>
+<div class="bg-[#61C4B7] w-full h-full rounded-[8px] mt-6 ">
+  <img class="pt-6 pl-[190px] pb-10 pr-7"  src="./assets/pattern-photography.svg" alt="Photography">
+  <h3 class="pl-6 text-[24px] font-[jakarta sans] text-[#FFFFFF] font-bold not-italic leading-normal ">Photography</h3>
+</div>
 
-  Free Consultation
+<div class="bg-[#552049] w-full h-full rounded-[8px] mt-6 ">
+  <img class="pt-6 pl-[190px] pb-10 pr-7"  src="./assets/pattern-motion-graphics.svg" alt="Motion">
+  <h3 class="pl-6 text-[24px] font-[jakarta sans] text-[#FFFFFF] font-bold not-italic leading-normal ">Motion Graphics</h3>
+</div>
+</div>
 
-  Design solutions made easy
+<div>
+<div class="pb-10">
+  <img  src="./assets/image-amy.webp" alt="">
+</div>
+<div class="pb-[100px]">
+  <h2 class=" text-center text-[black] font-[jakarta sans] text-[26px] font-bold not-italic leading-normal" >I’m Amy, and I’d love to work on your next project</h2>
+  <p class="pt-6 text-center text-[#7A746E] text-[16px] font-medium leading-[26px]">I love working with others to create beautiful design solutions. I’ve designed everything from brand illustrations to complete mobile apps. I’m also handy with a camera!</p>
+  <button class=" mt-6  ml-[83px] mr-[83px] font-[jakarta sans] mt-[13px]  w-44 h-11 rounded-[28px] bg-[#EB7565] text-white text-[14px] font-bold not-italic leading-[28px] ">Free Consultation</button>
+</div>
+</div>
 
-  With over ten years of experience in various design disciplines, I’m your one-stop shop for your design needs.
+<div class="pb-[100px]">
+<h3 class="pb-8 font-[jakarta sans] text-[36px] font-bold not-italic  text-center text-[#030303]" >My Work</h3>
+<div class="flex items-center justify-center gap-[15px]">
+<img class="w-[270px] " src="./assets/image-slide-2.jpg" alt="image1">
+<img class="w-[270px]" src="./assets/image-slide-3.jpg" alt="image2">
+<img class="w-[270px]" src="./assets/image-slide-4.jpg" alt="image3">
+</div>
+<div class="flex gap-4 justify-center pt-6 pb-[] ">
+<img src="./assets/Group 27 (1).svg" alt="left-right">
+</div>
 
-  Graphic Design
-  UI/UX
-  Apps
-  Photography
-  Illustrations
-  Motion Graphics
+</div>
 
-  I’m Amy, and I’d love to work on your next project
+<div class="bg-black mb-[50px] rounded-[10px]" >
+<h2 class="text-white pt-[49px] pb-6 font-[jakarta sans] text-[26px] font-bold not-italic  text-center ">Book a call with me</h2>
+<p class= " pl-6 pr-6   text-white text-center font-[jakarta sans] not-italic text-[16px] font-medium leading-[26px] ">I’d love to have a chat to see how I can help you. The best first step is for us to discuss your project during a free consultation. Then we can move forward from there.</p>
+<button class=" mt-6  ml-[83px] mr-[83px] mb-12  font-[jakarta sans] mt-[13px]  w-44 h-11 rounded-[28px] bg-[#EB7565] text-white text-[14px] font-bold not-italic leading-[28px] ">Free Consultation</button>
+</div>
 
-  I love working with others to create beautiful design solutions. I’ve designed everything from brand illustrations 
-  to complete mobile apps. I’m also handy with a camera!
 
-  Free Consultation
-
-  My Work
-
-  Book a call with me
-
-  I’d love to have a chat to see how I can help you. The best first step is for us to discuss your project during a 
-  free consultation. Then we can move forward from there.
-
-  Free Consultation
-
-  Free Consultation
+<div class="flex mt-4 ml-4 mr-4 mb-[34px] gap-[119px]">
+  <img src="./assets/logo.svg" alt="logo">
+  <button class="font-[jakarta sans] mt-[13px]  w-44 h-11 rounded-[28px]  bg-black text-white text-[14px] font-bold not-italic leading-[28px] ">Free Consultation</button>
+</div>
+</main>
+ 
 
 </body>
 </html>
